--- a/style.css
+++ b/style.css
@@ -3,3 +3,48 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+text-align: center;
+}
+img{
+  display: block;
+  margin: 0 auto;
+}
+
+nav {
+  text-align: center;
+  
+}
+
+nav a {
+ display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey; 
+}
+
+figcaption {
+  font-size: 14px;
+  text-align: center;
+}
+
+#featured-property p {
+  width: 800px;
+  margin: 10px auto; 
+  text-align: center;
+}
+
+#details div {
+  float: left;
+  width: 25%; 
+  text-align: center;
+  background-color: red;
+}
+
+
+.footer div {
+  width: 25%;
+  background-color: red;
+  text-align: center;
+  float: left;
+}
